<resources>
    <string name="app_name" translatable="false">Films Search</string>
    <string name="details">Детали</string>
    <string name="share">Поделиться с друзьями</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="want_exit">Вы хотите закрыть приложение?</string>
    <string name="exit">Выход</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="favorites">Избранное</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="films">Фильмы</string>
    <string name="settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_to_fav">Фильм %s добавлен в Избранное</string>
    <string name="remove_from_fav">Фильм %s был удален из Избранного</string>
    <string name="undo">Отмена</string>
    <string name="lang">Русский</string>
    <string name="current_lang">Текущий язык: %s</string>
    <string name="current_theme">Текущая тема: %s</string>
    <string name="day">Дневная</string>
    <string name="night">Ночная</string>
    <string name="rating">Рейтинг: %s (%s голосов)</string>
    <string name="repeat">Повторить</string>
    <string name="notification_title">Напоминание о фильме</string>
    <string name="notification_text">Вы отложили фильм %s.\nПора его посмотреть!</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="see_later">Вы хотите отложить фильм %s \nв список \"Посмотреть позже\"</string>
    <string name="not_empty_date">Значение \"Дата\" не может быть пустым.</string>
    <string name="list_is_empty">Список %s пуст.</string>
    <string name="watch_later">Посмотреть позже</string>
</resources>
